--- a/register.html
+++ b/register.html
@@ -30,7 +30,7 @@
             <button class="login-button" id="login-btn"><b class="login-text"><div id="loading">Sing In</div></b></button><br>
             <div class="register-container">
                 <label class="register-text">Alredy Have Account?</label>
-                <a href="login.html" class="link-register">Login</a>
+                <a href="index.html" class="link-register">Login</a>
             </div>
             
         </div>
@@ -40,4 +40,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 </html>
